# taptupo-forum

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  unit-tests.yml
app/: config.py  logging_config.py  main.py  middleware.py  rendering.py  search.py
app/agents/: base_agent.py  discussion.py  model_discovery.py  news_agent.py  registry.py
app/auth/: passwords.py  routes.py  sessions.py  utils.py
app/db/: __init__.py  dynamo.py  dynamo_local.py  factory.py  interface.py
app/forum/: __init__.py  routes.py
app/mcp/: __init__.py  catalog.py  server.py
app/models/: __init__.py  news_item.py  post.py  schemas.py  thread.py  user.py
app/news/: aggregator.py  arxiv.py  content.py  guardian.py  hackernews.py  interface.py  newsapi.py  reddit.py  rss.py
app/pages/: __init__.py  routes.py
app/realtime/: __init__.py  broker.py  websocket.py
app/routes/: threads.py  websocket.py
app/static/css/: main.css  style.css
app/storage/: s3.py
app/templates/: 404.html  _post.html  agents.html  base.html  home.html  index.html  login.html  new_thread.html  register.html  thread.html
app/templates/fragments/: post.html
docs/plans/: 2026-04-11-taptupo-forum-design.md  2026-04-11-taptupo-forum-implementation.md
infra/cloudformation/: app.yml  dynamodb.yml
quality/static/: bandit.yml
reports/: test-report.html
scripts/: run_mcp_server.py  run_unit_tests.sh  setup_tables.py
tests/: conftest.py
tests/e2e/: conftest.py  test_forum_flow.py
tests/fixtures/arxiv/: sample.atom
tests/fixtures/guardian/: sample.json
tests/fixtures/hackernews/: item_11001.json  item_11002.json  item_11003.json  topstories.json
tests/fixtures/newsapi/: sample.json
tests/fixtures/reddit/: sample.json
tests/fixtures/rss/: sample.xml
tests/fuzz/: fuzz_news_parsers.py
tests/hypothesis/agents/: test_expertise_matches_properties.py
tests/hypothesis/auth/: test_register_username_properties.py
tests/hypothesis/models/: test_news_item_properties.py  test_post_properties.py  test_thread_properties.py  test_user_properties.py
tests/hypothesis/news/: test_parsers_robust.py
tests/integration/db/: test_dynamo_repository.py
tests/load/: locustfile.py
tests/unit/: test_agents.py  test_app_infra.py  test_auth.py  test_config.py  test_db_dynamo_local.py  test_logging_config.py  test_main.py  test_mcp_server.py  test_mcp_tools.py  test_middleware.py  test_model_discovery.py  test_models.py  test_news.py  test_rendering.py  test_routes.py  test_search.py  test_setup_tables.py  test_storage_s3.py
tests/unit/agents/: test_base_agent.py  test_discussion.py  test_news_agent.py  test_registry.py
tests/unit/auth/: test_passwords.py  test_routes.py  test_sessions.py
tests/unit/db/: test_factory.py  test_interface.py
tests/unit/forum/: test_routes.py
tests/unit/models/: test_news_item.py  test_post.py  test_thread.py  test_user.py
tests/unit/news/: test_aggregator.py  test_arxiv.py  test_guardian.py  test_hackernews.py  test_newsapi.py  test_reddit.py  test_rss.py
tests/unit/pages/: test_routes.py
tests/unit/realtime/: test_broker.py  test_websocket.py
