[project]
name = "taptupo-forum"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "John Hancock", email = "jhancock1975@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "arxiv>=2.4.1",
    "boto3>=1.40.61",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.26",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "atheris>=3.0.0",
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "httpx>=0.28.1",
    "hypothesis>=6.151.12",
    "locust>=2.43.4",
    "moto>=5.1.22",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.10",
    "safety>=3.7.0",
    "types-python-dateutil>=2.9.0.20260408",
]
